# image_viewer

./: .gitignore  CMakeLists.txt  build.sh  install.sh  uninstall_ubuntu.sh
include/: dir_scanner.hpp  image_viewer.hpp  my_utils_kk4.hpp  window_manager.hpp
src/: dir_scanner.cpp  image_viewer.cpp  image_viewer.hpp  main.cpp  test.cpp  window_manager.cpp
